--- a/Practicas/19/styles.css
+++ b/Practicas/19/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .calculator {
-    width: 300px;
+    
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -16,7 +16,7 @@ body {
 }
 
 #display {
-    width: 100%;
+    /* width: 100%; */
     margin-bottom: 10px;
     padding: 10px;
     font-size: 1.5em;
