--- a/Practicas/20/styles.css
+++ b/Practicas/20/styles.css
@@ -1,12 +1,36 @@
-div {
-    position: relative;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    font-family: 'Arial', sans-serif;
 }
 
-h1 {
-    position: relative;
-    margin: auto;
+.calculator {
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-h2 {
-    position: absolute;
-   margin: auto;
+
+#display {
+    /* width: 100%; */
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 1.5em;
+}
+
+.buttons {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+}
+
+button {
+    padding: 30px; 
+    font-size: 1.2em; /* Aumenta el tamaño del font */
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    cursor: pointer;
 }
