--- a/Practicas/22/styles.css
+++ b/Practicas/22/styles.css
@@ -1,13 +1,46 @@
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
 body {
     background-color: #d3d3d3;
+    margin: 0;
 }
 
 nav {
-    display: flex;
     background-color: white;
-    align-items: center;
     padding: 10px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+select {
+    margin-right: 800px;
+    
+}
+
+.nav-links {
+    display: flex;
+    gap: 10px; 
+}
+
+a {
+    color: black;
+    border-color: black;
+    padding: 0.5rem 0.5rem;
+    font-size: small;
+    font-weight: 400;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 
 .mene {
     width: 150px; 
@@ -23,6 +56,7 @@ a {
     font-weight: 400;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
     
 }
 
