--- a/Practicas/22/styles.css
+++ b/Practicas/22/styles.css
@@ -23,12 +23,16 @@ nav {
 
 select {
     margin-right: 800px;
+    width: 350px;
+    margin-left: auto;
+    
     
 }
 
 .nav-links {
     display: flex;
-    gap: 10px; 
+    
+    
 }
 
 a {
@@ -39,6 +43,8 @@ a {
     font-weight: 400;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    
 }
 
 
@@ -46,18 +52,6 @@ a {
     width: 150px; 
     height: auto;
     margin-right: 10px;
-}
-
-a {
-    color: black;
-    border-color: black;
-    padding: 0.5rem 0.5rem;
-    font-size: small;
-    font-weight: 400;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-left: 10px;
-    
 }
 
 .luna {
