--- a/Practicas/Pruebas/styles.css
+++ b/Practicas/Pruebas/styles.css
@@ -1,10 +1,8 @@
-/* Estilos para el header y nav */
 header {
     display: flex;
     justify-content: space-between;
     padding: 10px;
 }
-
 body {
     background-color: #d3d3d3;
     margin: 0;
@@ -19,21 +17,26 @@ nav {
     left: 0;
     z-index: 1000;
     display: flex;
+    /* justify-content: space-between; */
     align-items: center;
 }
 
+/* nav > * { outline: 2px solid green }  */
 select {
+    
     width: 350px;
     padding-left: 20px;
 }
-
 .portada {
     background-image: url(casa.png);
+
 }
 
 .nav-links {
     display: flex;
     margin-left: auto;
+    
+    
 }
 
 a {
@@ -45,10 +48,12 @@ a {
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
+    
 }
 
+
 .mene {
-    width: 150px;
+    width: 150px; 
     height: auto;
     margin-right: 10px;
 }
@@ -58,54 +63,50 @@ a {
     height: auto;
     margin-right: 10px;
 }
-
 /* Estilos para el nuevo contenedor */
 .content-container {
-    background-color: white;
+    background-color:white;
     padding: 20px;
-    margin: 60px auto;
+    margin: 60px auto; /* Incrementé el margen desde la parte superior para separarlo del nav */
     max-width: 600px;
-    margin-left: 20px;
-    border-radius: 5px;
+    margin-left: 120px;
+    border-radius: 5px ;
 }
 
 /* Estilos para la nueva caja */
 .content-box {
-    display: flex;
-    flex-direction: column;
+    display: flex; /* Utilizamos flexbox para alinear los elementos en fila */
+    flex-direction: column; /* Alinear los elementos en fila (horizontal) */
     
 }
 
 .content-box textarea {
-    width: 50%;
+    width: calc(50% - 5px); /* Ocupa el 50% del ancho con un pequeño espacio en el medio */
     box-sizing: border-box;
-    margin-bottom: 10px;
-    padding: 10px;
-    font-size: 21px;
-    font-family: 'Arial', sans-serif;
-    border: none;
+    margin-right: 10px; /* Espacio entre el textarea y la imagen */
+    padding: 10px; /* Añade un relleno alrededor del texto */
+    font-size: 21px; /* Tamaño del texto */
+    font-family: 'Arial', sans-serif; /* Tipo de fuente */
+    border: none; /* Borde alrededor del textarea */
     border-radius: 5px;
     font-weight: bold;
 }
 
 .content-box img {
-    width: 50%;
+    width: calc(30% - 5px); /* Ocupa el 50% del ancho con un pequeño espacio en el medio */
     height: auto;
     display: block;
     border-radius: 10px;
-    
+    margin-left: 10px;
 }
-
-.link-container,
+link-container,
 .text-container {
-    margin-top: 10px;
+    margin-top: 10px; /* Espacio entre los elementos */
 }
 
 .link-container a {
     text-decoration: underline;
     color: blue;
-    display: block;
-    margin-top: 10px;
 }
 
 .text-container p {
@@ -115,14 +116,6 @@ a {
 
 .text-and-image {
     display: flex;
-    flex-direction: row;
-    margin-bottom: 10px;
-    
+    flex-direction: row; /* Organiza el texto y la imagen en fila (horizontal) */
+    margin-bottom: 10px; /* Añadido para espaciado entre el textarea y la imagen */
 }
-
-.texto2 {
-
-    font-size: small;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
