--- a/Practicas/22/styles.css
+++ b/Practicas/22/styles.css
@@ -1,4 +1,3 @@
-/* Estilos para el header y nav */
 header {
     display: flex;
     justify-content: space-between;
@@ -59,17 +58,17 @@ a {
     margin-right: 10px;
 }
 
-/* Estilos para el nuevo contenedor */
+
 .content-container {
     background-color: white;
     padding: 20px;
     margin: 60px auto;
     max-width: 600px;
-    margin-left: 20px;
+    margin-left: 220px;
     border-radius: 5px;
 }
 
-/* Estilos para la nueva caja */
+
 .content-box {
     display: flex;
     flex-direction: column;
@@ -85,7 +84,7 @@ a {
     font-family: 'Arial', sans-serif;
     border: none;
     border-radius: 5px;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .content-box img {
@@ -99,6 +98,7 @@ a {
 .link-container,
 .text-container {
     margin-top: 10px;
+    font-size: 5px;
 }
 
 .link-container a {
@@ -111,6 +111,7 @@ a {
 .text-container p {
     font-size: 14px;
     color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .text-and-image {
@@ -122,7 +123,7 @@ a {
 
 .texto2 {
 
-    font-size: small;
+    font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
