--- a/Practicas/22/styles.css
+++ b/Practicas/22/styles.css
@@ -75,9 +75,9 @@ a {
     
 }
 
-.content-box textarea {
+.content-box h1 {
     width: 50%;
-    box-sizing: border-box;
+ 
     margin-bottom: 10px;
     padding: 10px;
     font-size: 21px;
@@ -88,10 +88,12 @@ a {
 }
 
 .content-box img {
-    width: 50%;
-    height: auto;
+    width: 30%;
+    height: 30%;
     display: block;
     border-radius: 10px;
+    margin-top: 12px;
+    margin-left: 109px;
     
 }
 
@@ -101,12 +103,6 @@ a {
     font-size: 5px;
 }
 
-.link-container {
-    text-decoration: underline;
-    color: blue;
-    display: block;
-    margin-top: 10px;
-}
 
 .text-container p {
     font-size: 14px;
@@ -126,4 +122,13 @@ a {
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+.primeralinea{
+display: flex;
+    
+}
+.link {
+    color: gray;
+    text-decoration: none;
+    font-size: 12px;
+    margin-top: -29px;
+}
