--- a/Practicas/22/styles.css
+++ b/Practicas/22/styles.css
@@ -7,6 +7,8 @@ header {
 body {
     background-color: #d3d3d3;
     margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
 nav {
@@ -145,6 +147,8 @@ display: flex;
 }
 footer {
     background-color: #fff9f0;
+    margin-top: auto;
+    
     
 }
 .imagemene2{
