--- a/Practicas/28/styles.css
+++ b/Practicas/28/styles.css
@@ -50,6 +50,14 @@ body {
     color: white;
     position: relative;
 }
+.logo2{
+    max-width: 8%;
+    border-radius: 50%;
+    margin-left: 450px;
+}
+.help{
+    margin-left: 350px;
+}
 .caja {
     background-color: #333;
     border-radius: 10px;
