--- a/Practicas/28/styles.css
+++ b/Practicas/28/styles.css
@@ -56,7 +56,10 @@ body {
     margin-left: 450px;
 }
 .help{
-    margin-left: 350px;
+    margin-left: 310px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
 }
 .caja {
     background-color: #333;
