--- a/Practicas/23/styles.css
+++ b/Practicas/23/styles.css
@@ -24,27 +24,35 @@ a {
 }
 .floating-card {
     position: fixed;
-    left: -90%;
-    top: 0;
-    height: 100vh;
-    width: 90%;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    transition: left 0.5s ease;
+    transform:translateX(-100%) ;
+    background-color:rgb(89, 123, 47, 1);
 }
-
+.floating-card:hover {
+    transform: translateX(0%);
+}
 .trigger-area {
-    width: 10%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    /* width: 10%;
+    height: 100vh; */
+    background-color: rgb(255, 81, 0);
     cursor: pointer;
+    position: absolute;
+    font-family:'Quicksand';
+    font-size: large;
+    color: white;
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    border-radius: 5px;
 }
 
 .content {
-    padding: 20px;
+    /* padding: 20px; */
+    font-family: 'Quicksand';
+    color: white;
+    border-left: 10px;
 }
-
-.floating-card:hover {
-    left: 0;
+h2 {
+font-size: 18px;
+}
+p {
+    font-size: 30px;
 }
