--- a/Practicas/27/styles.css
+++ b/Practicas/27/styles.css
@@ -71,3 +71,11 @@ main {
     height: auto;
     display: block;
 }
+footer{
+    background-color: black;
+    color: white;
+    padding: 1em;
+    text-align: center;
+    font-size: 33px;
+    
+}
