--- a/Practicas/17/styles.css
+++ b/Practicas/17/styles.css
@@ -16,6 +16,11 @@ body{
 div{
     text-align: center;
     max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+    padding: 30px;
     
     
 }
