--- a/Practicas/17/styles.css
+++ b/Practicas/17/styles.css
@@ -2,18 +2,20 @@
     font-family: 'Eb';
     src: url(Eb.ttf);
 }
-body{
+
+body {
     font-family: 'Eb';
     background-image: url(image.jpg);
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
-    height: 100vh; 
-    margin: 0; 
-    flex-direction: column; 
+    height: 100vh;
+    margin: 0;
+    flex-direction: column;
 
 }
-div{
+
+div {
     text-align: center;
     max-width: 800px;
     display: flex;
@@ -21,25 +23,28 @@ div{
     background: rgba(255, 255, 255, 0.3);
     border-radius: 5px;
     padding: 30px;
-    
-    
+
+
 }
+
 h1 {
-color: blue;
+    color: blue;
 }
+
 p {
-color: yellowgreen;
-font-size: 30px;
-text-decoration: underline;
+    color: black;
+    font-size: 30px;
+    text-decoration: underline;
 }
+
 button {
-    
-    background-color: red; 
-    color: white; 
-    padding: 10px 20px; 
-    font-size: 16px; 
-    border: none; 
-    cursor: pointer; 
-    border-radius: 5px; 
+
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
     margin-top: 10px;
 }
