--- a/Practicas/29/styles.css
+++ b/Practicas/29/styles.css
@@ -1,33 +1,35 @@
 @font-face {
     font-family: 'Abril';
-    src: url(AbrilFatface-Regular.ttf);
+    src: url(Fonts/AbrilFatface-Regular.ttf);
 }
 
 body {
-    background-image: url(fondo.jpg);
+    background-image: url(Images/fondo.jpg);
     background-size: cover;
     min-height: 100vh;
     margin: 0;
     font-family: 'Abril';
 }
 
-.nav {
+nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0px;
-    
-    
+
+
 }
 
 nav img {
     max-height: 80px;
-    margin-right: 15px; /* Cambiado de margin-left a margin-right */
+    margin-right: auto;
 }
 
 .textnav {
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-right: auto;
 }
 
 nav a {
@@ -42,4 +44,53 @@ nav a {
 
 nav a:hover {
     background-color: #72A0C1;
+}
+
+@font-face {
+    font-family: 'Hugh';
+    src: url(Fonts/Hugh.ttf);
+}
+
+.pres {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    padding: 30px;
+    max-width: 400px;
+    margin: auto;
+    margin-top: 80px;
+    text-align: center;
+    font-family: 'Hugh';
+    font-size: 70px;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    color: white;
+}
+
+body.pageproduct {
+    font-family: 'Abril';
+    background-image: url(Images/product.jpg);
+    background-size: cover;
+    min-height: 100vh;
+    margin: 0;
+}
+body.about{
+    font-family: 'Abril';
+    background-image: url(Images/about.jpg);
+    background-size: cover;
+    min-height: 100vh;
+    margin: 0;
+}
+body.contacts{
+    font-family: 'Abril';
+    background-image: url(Images/contacts.jpg);
+    background-size: cover;
+    min-height: 100vh;
+    margin: 0;
 }
