--- a/Practicas/29/styles.css
+++ b/Practicas/29/styles.css
@@ -87,10 +87,34 @@ body.about{
     min-height: 100vh;
     margin: 0;
 }
+
 body.contacts{
     font-family: 'Abril';
     background-image: url(Images/contacts.jpg);
     background-size: cover;
     min-height: 100vh;
     margin: 0;
+}
+.prescont {
+    /* display: grid;
+    grid-template-rows: repeat(2, 1fr); 
+    grid-template-columns: 1fr 1fr;
+    gap: 1px;  */
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    
+}
+.prescont > a {
+   display: inline-block;
+    margin: 10px;
+}
+.prescont > a > img{
+    max-width: 200px;
+    margin: auto;
+    margin-top: 150px;
+}
+.prescont > p {
+    font-family: 'Hugh';
+    font-size: 100px;
 }
