--- a/Practicas/30/styles.css
+++ b/Practicas/30/styles.css
@@ -129,11 +129,12 @@ body.contactos {
 body.lessons{
     background-image: url(Img/lessons2.jpeg);
     background-repeat: no-repeat;
-    background-position: 260px 48px;
+    background-position: 50% 48px;
     background-size: 60%;
     margin: 0;
     padding: 0;
     display: flex; 
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     background-color: blue;
@@ -145,10 +146,41 @@ body.lessons{
     padding: 30px;
     max-width: 400px;
     margin: auto;
-    margin-top: 80px;
+    margin-top: 0px;
     text-align: center;
 }
 p.teach::first-letter{
     font-size: 300%;
     float: left;
+}
+.bodyabout{
+    background-image: url(Img/about\ us.jpeg);
+    background-repeat: no-repeat;
+    background-position: 50% 48px;
+    background-size: 60%;
+    margin: 0;
+    padding: 0;
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: green;
+}
+.aboutus{
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    padding: 30px;
+    max-width: 800px;
+    margin-top: -155px;
+    text-align: center;
+    font-size: 20px;
+    
+}
+h1{
+    color: yellow;
+}
+h2{
+    color: red;
+    font-size: 22px;
+    text-decoration: underline;
 }
