--- a/Practicas/FP/Oscar/styles.css
+++ b/Practicas/FP/Oscar/styles.css
@@ -1,36 +1,43 @@
 body{
-    background-color: sandybrown;
+    background-color: #DDB68B;
 }
 h1{
     margin: 0;
     color: grey;
     font-family: sans-serif;
-    position: relative;
     text-align: center;
 
 }
 div{
     height: 300px;
     width: 300px;
-    border: 4px dashed brown;
-    position: relative;
+    border: 4px dashed #FD7657;
+    /* position: relative; */
     float: left;
     margin: 25px;
-    background-color: sandybrown;
+    background-color: #DDB68B;
 }
 h2{
-    background-color: brown;
+    background-color: #FD7657;
     text-align: center;
-    color: white;
+    color: #ffffff;
     margin: 0;
+    top: -6%;
+    position: relative;
+    max-width: 50%;
+    left: 24%;
+
 }
 p {
-    font-family: 'Times New Roman', Times, cursive;
+    font-family: 'Times New Roman', Times, sans-serif ;
     color: black;
     font-size: 25px;
+    font-style: italic;
+    padding: 16px;
     
 }
 p::first-letter{
-    size: 800%;
+    font-size: 200%;
     float: left;
+    font-style: normal;
 }
