--- a/Practicas/13/styles.css
+++ b/Practicas/13/styles.css
@@ -1,45 +1,51 @@
+@font-face {
+  font-family: "Raleway";
+  src: url("Raleway-VariableFont_wght.ttf");
+}
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+  font-family: "Raleway", sans-serif;
+  background-image: url("leaf.jpeg");
+  background-position: center;
+  background-size: 100% 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .project-links {
-    max-width: 600px;
-    margin: 50px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 50px auto;
+  background: rgba(69, 67, 67, 0.8);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-    text-align: center;
-    color: #333;
+  text-align: center;
+  color: #333;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 li {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: #3498db;
-    border: 1px solid #3498db;
-    border-radius: 4px;
-    text-align: center;
-    transition: background-color 0.3s;
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+  border: 1px solid #3498db;
+  border-radius: 4px;
+  text-align: center;
+  transition: background-color 0.3s;
 }
 
 a:hover {
-    background-color: #3498db;
-    color: #fff;
+  background-color: #3498db;
+  color: #fff;
 }
