--- a/Practicas/32/styles.css
+++ b/Practicas/32/styles.css
@@ -1,3 +1,7 @@
+body{
+    border: 0;
+    margin: 0;
+}
 .image {
     display: flex;
     justify-content: center;
@@ -16,10 +20,12 @@ nav {
     display: flex;
     gap: 40px;
     
+    
 }
 nav a{
     text-decoration: none;
     color: black;
+    
 }
 
 .content {
@@ -132,9 +138,39 @@ border-bottom-color: rgb(0, 0, 0);
     display: flex;
     margin: 0 auto;
     max-width: 60%;
+    flex-direction: row;
+    gap: 45px;
+    border-top: 1px solid rgb(235, 235, 232);
+    margin-top: 40px;
+    border-bottom-width: medium;
+    border-bottom-style: double;
+    border-bottom-color: rgb(0, 0, 0);
+}
+.contentimage{
+    display: flex;
     flex-direction: column;
 }
 .smallimg{
     height: 150px;
     width: 250px;
+    border-right: 1px solid rgb(235, 235, 232);;
+}
+.contentimage h1{
+    font-size: 14px;
+}
+.contentimage h6{
+    margin-top: 1px;
+}
+
+#overlay{
+    position: fixed;
+    background-color: brown;
+    width: 100%;
+    height: 100%;
+}
+#overlay div{
+    background-color: blue;
+}
+#overlay.hidden{
+    display: none;
 }
