--- a/Practicas/32/styles.css
+++ b/Practicas/32/styles.css
@@ -2,6 +2,9 @@ body{
     border: 0;
     margin: 0;
 }
+#overlay a{
+    color: red;
+}
 .image {
     display: flex;
     justify-content: center;
@@ -153,7 +156,7 @@ border-bottom-color: rgb(0, 0, 0);
 .smallimg{
     height: 150px;
     width: 250px;
-    border-right: 1px solid rgb(235, 235, 232);;
+    border-right: 1px solid rgb(235, 235, 232);
 }
 .contentimage h1{
     font-size: 14px;
@@ -164,12 +167,18 @@ border-bottom-color: rgb(0, 0, 0);
 
 #overlay{
     position: fixed;
-    background-color: brown;
-    width: 100%;
-    height: 100%;
+    background-color: white;
+    width: 695px;
+  height: 500px;
+  border-radius: 5px;
+  margin-left: 536px;
+  margin-top: 233px;
+  border: 2px solid black;
 }
 #overlay div{
-    background-color: blue;
+    background-color: black;
+    color: white;
+    margin-top: inherit;
 }
 #overlay.hidden{
     display: none;
