--- a/Practicas/32/styles.css
+++ b/Practicas/32/styles.css
@@ -1,3 +1,6 @@
+@media screen and (min-width:481px) {
+    
+}
 body{
     border: 0;
     margin: 0;
@@ -167,18 +170,20 @@ border-bottom-color: rgb(0, 0, 0);
 
 #overlay{
     position: fixed;
-    background-color: white;
-    width: 695px;
-  height: 500px;
-  border-radius: 5px;
-  margin-left: 536px;
-  margin-top: 233px;
-  border: 2px solid black;
+    background-color: #0000007a;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #overlay div{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     margin-top: inherit;
+    max-width: 50%;
+    border: 2px solid black;
 }
 #overlay.hidden{
     display: none;
