--- a/Practicas/calc/styles.css
+++ b/Practicas/calc/styles.css
@@ -2,6 +2,9 @@
     font-family: 'pay' ;
     src: url(PaybAck.ttf);
 }
+body{
+    background-color: #e3f9ff;
+}
 *{
     padding: 0;
     font-family: 'pay';
@@ -48,16 +51,17 @@ form .display{
 }
 
 form .display input{
-    text-align: center;
+    text-align: right;
     flex: 1;
     font-size: 45px;
     box-shadow: none;
 }
 form input.equal{
     width: 145px;
+    color: #33ffd8;
 }
-
-form input.operator{
+form input.operator,
+#decimal {
     color: #33ffd8;
 }
 
